# fintech-sdk-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: financial_audit.py  real_world_usage.py
sapliyio_fintech/: __init__.py  api_client.py  configuration.py  events.py  flows.py  rest.py
sapliyio_fintech.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sapliyio_fintech/api/: __init__.py  auth_api.py  billing_api.py  events_api.py  executions_api.py  flows_api.py  ledger_api.py  notification_service_api.py  payment_service_api.py  payments_api.py  wallet_service_api.py  wallets_api.py  zones_api.py
sapliyio_fintech/models/: __init__.py  auth_add_team_member_request.py  auth_create_sso_provider_request.py  auth_initiate_sso_request.py  auth_list_team_members_response.py  auth_remove_team_member_response.py  auth_validate_key_request.py  auth_validate_token_request.py  auth_validate_token_response.py  automation_flow.py  automation_flow_execution.py  automation_flow_execution_step.py  billing_create_subscription_request.py  billing_list_subscriptions_response.py  billing_subscription.py  confirm_payment_intent_request.py  create_payment_intent_request.py  create_zone_request.py  emit_event202_response.py  error_envelope.py  get_past_events200_response.py  ledger_account.py  ledger_entry.py  ledger_record_transaction_response.py  ledger_transaction.py  list_flows200_response.py  list_zones200_response_inner.py  notifications_delete_webhook_endpoint_response.py  notifications_list_webhook_endpoints_response.py  payment_intent.py  (+16 more)
