[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sapliyio-fintech"
version = "0.0.1"
authors = [
  { name="Sapliy", email="dev@sapliy.com" },
]
description = "Official Sapliy Fintech Ecosystem SDK for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://github.com/Sapliy/fintech-ecosystem"
