[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sapliyio-fintech"
version = "0.0.1"
authors = [
  { name="Sapliy", email="dev@sapliy.com" },
]
description = "Official Sapliy Fintech Ecosystem SDK for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "urllib3 >= 2.1.0, < 3.0.0",
    "python-dateutil >= 2.8.2",
    "pydantic >= 2.0.0",
    "typing-extensions >= 4.7.1",
]

[project.urls]
"Homepage" = "https://github.com/Sapliy/fintech-ecosystem"
